--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -359,6 +359,7 @@
     <Compile Include="Steps\BuffetSteps.cs" />
     <Compile Include="Steps\ALaCarteSteps.cs" />
     <Compile Include="PageObjects\ModalDialogPage.cs" />
+    <Compile Include="Support\Helpers\CommonHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
