--- a/MenuCycle.Tests/MenuCycle.Tests.csproj
+++ b/MenuCycle.Tests/MenuCycle.Tests.csproj
@@ -360,6 +360,9 @@
     <Compile Include="Steps\ALaCarteSteps.cs" />
     <Compile Include="PageObjects\ModalDialogPage.cs" />
     <Compile Include="Support\Helpers\CommonHelpers.cs" />
+    <Compile Include="PageObjects\Planning\PlanningTabDays\ItemLine.cs" />
+    <Compile Include="Models\ItemLineModel.cs" />
+    <Compile Include="PageObjects\Planning\PlanningTabDays\Recipe2.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.Chrome.config">
