--- a/MenuCycle.Tests/App.config
+++ b/MenuCycle.Tests/App.config
@@ -45,10 +45,9 @@
     <stepAssemblies>
         
     <!-- This attribute is required in order to use StepArgument Transformation as described here; 
-    https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  -->
-    <stepAssembly assembly="SpecFlow.Assist.Dynamic"/>
-    <stepAssembly assembly="Fourth.Automation.Framework.Core"/>
+    https://github.com/marcusoftnet/SpecFlow.Assist.Dynamic/wiki/Step-argument-transformations  --><stepAssembly assembly="Fourth.Automation.Framework.Core"/>
     <stepAssembly assembly="Fourth.Automation.SpecFlow.Extensions"/>
+    <stepAssembly assembly="SpecFlow.Assist.Dynamic"/>
     <stepAssembly assembly="Fourth.Automation.Framework.Reporting"/>
     </stepAssemblies>
   
@@ -57,10 +56,10 @@
   </plugins>
 <!-- For additional details on SpecFlow configuration options see http://go.specflow.org/doc-config --></specFlow>
 <fourth driverType="" serverUrl="" driverDirectory="">
-<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
-<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
-<capabilities>
-</capabilities>
+	<reporting keepScreenshot="false" takeScreenshotOnError="false"/>
+	<timeout driverCommands="00:00:59" defaultWait="00:00:59"/>
+	<capabilities>
+	</capabilities>
 </fourth>
 <log4net>
 <appender name="RollingFile" type="log4net.Appender.RollingFileAppender">
