--- a/MenuCycle.Tests/App.RemoteS8Plus.config
+++ b/MenuCycle.Tests/App.RemoteS8Plus.config
@@ -5,7 +5,7 @@
   <appSettings>
     <add key="WebviewName" value="WEBVIEW_com.fourth.marketplace" xdt:Transform="Replace" xdt:Locator="Match(key)"/>
   </appSettings>
-  <fourth driverType="Android" serverUrl="http://944065ec.ngrok.io/wd/hub/" xdt:Transform="Replace">
+  <fourth driverType="Android" serverUrl="https://helpless-snake-45.localtunnel.me/wd/hub/" xdt:Transform="Replace">
     <timeout driverCommands="00:02:00"/>
     <capabilities>
       <add key="platformVersion" value="7.0"/>
